# Medit

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
.github/workflows/: build.yml
src/: animat.c  bbfile.c  clip.c  compil.date  critip.c  dlists.c  eigen.c  eigen.h  eigenv.c  ellipse.c  extern.h  geometry.c  gisfil.c  grafic.h  hash.c  ilists.c  inmesh.c.old  inmsh2.c  inout.c  insol.c.tmp  keyboard.c  libmesh5.c  listnum.c  main.c  material.c  medit.c  medit.h  memory.c  menus.c  mesh.c  mesh.h  mlists.c  mouse.c  normal.c  outmsh.c.old  parsar.c  parsop.c  particle.c  picking.c  picking.c.sav  (+9 more)
